--- a/kankan/pages/main/search.html
+++ b/kankan/pages/main/search.html
@@ -31,16 +31,19 @@
 	<script type="text/javascript">
 		(function(mui, doc) {
 			var keyword = "";
+			var wid = "";
 			mui.init({
 				beforeback: function() {
-					var list = plus.webview.getWebviewById('pullrefresh_with_tab');
-					mui.fire(list, 'search', {
+					var page = plus.webview.getWebviewById("pullrefresh_sub_" + wid + ".html");
+					mui.fire(page, 'search', {
 						keyword: keyword
 					});
 					return true;
 				}
 			});
-			$(doc).ready(function() {
+			mui.plusReady(function() {
+				wid = plus.webview.currentWebview().wid;
+				console.log("wid is " + wid);
 				$('.mui-icon-search').click(function() {
 					keyword = $('#search').val().trim();
 					Log.i("keyword is " + keyword);
