交易页面式样

--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -284,6 +284,7 @@
 					seller_msg += '<img style="height:85px;width:128px;" class="mui-media-object" src="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
 					seller_msg += '</a>';
 					$(".other li").html(seller_msg);
+					$(".other li").attr("style","margin-right:20px;");
 				}
 
 			}
