--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -512,9 +512,9 @@
 			var badnum=results.data.user_opinion_l_count;
 			var uname=results.data.user_name;
 			if(results.data.address=="" || results.data.address=="undefined"){
-				var address="全国";
+				var uaddress="全国";
 			}else{
-				var address=results.data.address;
+				var uaddress=results.data.address;
 			}
 			var uintroduce=results.data.introduce;
 			var uticknum=results.data.user_ticket;
@@ -524,10 +524,11 @@
 			$(".good").html(ugoodnum);
 			$(".normal").html(unormalnum);
 			$(".bad").html(badnum);
-			$(".address").html(address);
+			$(".address").html(uaddress);
 			$("#nickname").val(uname);
 			$(".point").html(user_point);
 			$(".maintitle").html(uname);
+			$(".maintitle").attr("style","margin-left:-51px;");
 			$("#introduce").val(uintroduce);
 			$(".ticknum").html(uticknum);
 			var language=results.data.talk_flag;
@@ -560,7 +561,7 @@
 				
 				exhibit_html+='<li class="user-goods-grid codedite">';
 				exhibit_html+='<a id="'+commexid+'" href="#">';
-				exhibit_html+='<div class="pimgbox"><img style="width: 100%;margin-top:-'+toppx+'px;" src="'+commeximg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
+				exhibit_html+='<div class="pimgbox"><img style="width: 95%;margin-top:-'+toppx+'px;" src="'+commeximg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 				exhibit_html+='</a>';
 				exhibit_html+='</li>';
 				var yunum=k%6;
@@ -593,7 +594,7 @@
 				}
 				praise_html+='<li class="user-goods-grid detail">';
 				praise_html+='<a id="'+praisepid+'" href="#">';
-				praise_html+='<div class="pimgbox"><img style="width: 100%;margin-top:-'+toppxpra+'px;" src="'+praiseimg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
+				praise_html+='<div class="pimgbox"><img style="width: 95%;margin-top:-'+toppxpra+'px;" src="'+praiseimg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 				praise_html+='</a>';
 				praise_html+='</li>';
 				var kiunum=ki%6;
@@ -745,8 +746,8 @@
 					$(".tran-page").show();
 				},
 				ng: function(data) {
-					if(data == "2002" || data == "1000") {
-						mui.toast(TextMessage.userng, {
+					if(data == "2002") {
+						mui.toast(TextMessage.test, {
 							duration: 'long',
 							type: 'div'
 						});
@@ -754,15 +755,6 @@
 								id: 'login',
 								url:"../../login/login.html"
 							});
-					}else if(data == "3020") {
-						mui.toast(TextMessage.errorCode_3020, {
-							duration: 'long',
-							type: 'div'
-						});
-						mui.openWindow({
-							id: 'login',
-							url:"../../login/emai_summate.html"
-						});
 					}else{
 							mui.back();
 					}
@@ -785,6 +777,7 @@
 						addresspicker(address);
 					},
 					ng: function(data) {
+						mui.back;
 						console.log(data);
 						console.log("other error code:" + data);
 						
@@ -841,6 +834,10 @@
 									mui.toast(TextMessage.userng, {
 										duration: 'long',
 										type: 'div'
+									});
+									mui.openWindow({
+										id: 'login',
+										url:"../../login/login.html"
 									});
 								}
 								if(data == "3020") {
