--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -425,8 +425,12 @@
 				});
 			});
 			mui.back = function() {
-				var _self = plus.webview.currentWebview();
-				_self.close("auto");
+				var btn = ["确定", "取消"];
+				mui.confirm('您要退出GMIS管理软件吗？', '提示', btn, function(e) {
+					if(e.index == 0) {
+						plus.runtime.quit();
+					}
+				});
 			}
 		</script>
 	</body>
