--- a/kankan/pages/transaction/transevaluate.html
+++ b/kankan/pages/transaction/transevaluate.html
@@ -15,7 +15,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title" class="lang" data-locale="trans_finish"></h1>
+			<h1 class="mui-title"><span class="lang" data-locale="trans_finish"></span></h1>
 		</header>
 		<div class="mui-pages">
 			<!--main content start-->
@@ -62,11 +62,11 @@
 								<li style="padding:5px;" class="lang" data-locale="eve_comment"></li>
 								<li>
 									<div class="mui-input-row" style="margin: 10px 5px;">
-										<textarea name="evaluate_msg" style="background:#eee;" id="evaluate_msg" rows="5" placeholder="このコメントは、引き取り完了後に評価一覧で公開されます。商品に問題がある場合などは、評価をせずに交易確認画面で伝えましょう。"></textarea>
+										<textarea name="evaluate_msg" style="background:#eee;" id="evaluate_msg" rows="5" placeholder=""></textarea>
 										<button id="evaluate_btn" onclick="evaluate_submit();" style="background:#eee;width:100%" type="button" class="mui-btn mui-btn-block mui-btn-block mui-btn-outlined lang" data-locale="eve_btn"></button>
 									</div>
 								</li>
-							</ul>s
+							</ul>
 							<div style="text-align:center;margin-top:-5px;background:#F3F3F3;height:40px;width:100%;padding-top:20px;">
 								<a href="javascript:gotoMain();" style="background:#6ACB9A;"><span class="lang" data-locale="home_return"></span></a>
 							</div>
@@ -79,6 +79,7 @@
 		</div>
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
+		<script type="text/javascript" src="../../js/language.js"></script>
 		<script type="text/javascript" src="../../js/sha256.js"></script>
 		<script type="text/javascript" src="../../js/common.js"></script>
 		<script type="text/javascript" charset="utf-8">
@@ -95,16 +96,18 @@
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
 				trans_id = self.transid;
-				$("#evaluate_msg").val(TextMessage.evaluateMsg);
+				$("#evaluate_msg").attr('placeholder',TextMessage.evaluateMsg);
 			});
 
 			function gotoMain(){
 				mui.plusReady(function() {
+					var preViewTrans = plus.webview.getWebviewById('transaction');
+					plus.webview.close(preViewTrans);
 					var requestView = plus.webview.getWebviewById('request');
 					plus.webview.close(requestView);
 					var requestlistView = plus.webview.getWebviewById('requestlist');
 					plus.webview.close(requestlistView);
-					var mainpage = plus.webview.getWebviewById('pullrefresh_with_tab');
+					var mainpage = plus.webview.getWebviewById('home');
 					mui.back();
 					mui.fire(mainpage, 'refresh', {
 						refresh: "canRefresh"
@@ -122,13 +125,7 @@
 				Repository.Transaction.transOrderEvaluate(params, {
 					ok: function(data) {
 						Log.i("message send successfully!");
-						mui.plusReady(function() {
-								var preView = plus.webview.getWebviewById('transaction');
-								plus.webview.close(preView);
-								var mainpage = plus.webview.getWebviewById('pullrefresh_with_tab');
-								mui.back();
-								mui.fire(mainpage, 'refresh', { refresh: "canRefresh" });
-							});
+						gotoMain();
 					},
 					ng: function(data) {
 						Api.callback_ng(data);
