物流中文文言更改

--- a/kankan/pages/main/logisticslist.html
+++ b/kankan/pages/main/logisticslist.html
@@ -181,7 +181,7 @@
 				content += "<font size=\"2\" color=\"white\">";
 				content += TextMessage.sedsuccseetext;
 				content += "<br>";
-				//content += msg + "<br>";
+				content += msg;
 				content += TextMessage.mailsucetext + "<br>";
 				content += TextMessage.requestmailtext + "<br><br></font>";
 				content += "<a onclick=\"gook();\">";
