--- a/kankan/pages/main/logisticslist.html
+++ b/kankan/pages/main/logisticslist.html
@@ -69,17 +69,17 @@
 	<script>
 		var timer;
 		mui.init();
-		window.onload = function(){
-            mui.plusReady(function(){
-                var self = plus.webview.currentWebview();
-                var flag = self.flag;
-               // alert(flag);
-                //关闭等待框
-                plus.nativeUI.closeWaiting();
-                //显示当前页面
-                mui.currentWebview.show();
-            });
-        }
+//		window.onload = function(){
+//          mui.plusReady(function(){
+//              var self = plus.webview.currentWebview();
+//              var flag = self.flag;
+//             // alert(flag);
+//              //关闭等待框
+//              plus.nativeUI.closeWaiting();
+//              //显示当前页面
+//              mui.currentWebview.show();
+//          });
+//      }
 		function showDialog(msg, tel, l_com_id) {
 			var dialog = document.getElementById('dialog');
 			var deliveryMsgDialog = document.getElementById('deliveryMsgDiv');
