--- a/kankan/pages/main/logisticslist.html
+++ b/kankan/pages/main/logisticslist.html
@@ -22,11 +22,10 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<!--<a class="mui-icon-back mui-action-back mui-icon mui-icon-left-nav mui-pull-left">
-				<font size="4" id="goback">
-					<font size="4">
-			</a>-->
-			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>-->
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;">
+				<font size="3" class="lang" data-locale="back"></font>
+			</a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>
 			<h1 class="mui-title lang" data-locale="logistic"></h1>
 		</header>
 		<div class="mui-content">
@@ -70,7 +69,6 @@
 	<script>
 		var timer;
 		mui.init();
-
 		function showDialog(msg, tel, l_com_id) {
 			var dialog = document.getElementById('dialog');
 			var deliveryMsgDialog = document.getElementById('deliveryMsgDiv');
@@ -81,8 +79,8 @@
 			// create content into innerHTML
 			content += "<font color=\"white\">";
 			content += msg;
-			content += "<br>";
-			content += tel;
+			//content += "<br>";
+			//content += tel;
 			content += TextMessage.sendtextrequest + "？</font>";
 			content += "<input type='hidden' id='l_com_idval' value='" + l_com_id + "' />";
 			deliveryMsgDialog.innerHTML = content;
@@ -167,8 +165,8 @@
 				content += "<font size=\"2\" color=\"white\">";
 				content += TextMessage.sedsuccseetext;
 				content += "<br>";
-				content += msg + "<br>";
-				content += tel + TextMessage.mailsucetext + "<br>";
+				//content += msg + "<br>";
+				content += TextMessage.mailsucetext + "<br>";
 				content += TextMessage.requestmailtext + "<br><br></font>";
 				content += "<a onclick=\"gook();\">";
 				content += "<font color=\"white\">OK</font>";
@@ -216,9 +214,9 @@
 				$(".tran-body").append(html.toString());
 				$("#goback").html(TextMessage.back);
 			}
-			mui(".homepage").on("tap", "div", function() {
-				var mainpage = plus.webview.getLaunchWebview();
-				mui.fire(mainpage, 'gohome');
+			mui(".homepage").on("tap","div",function(){
+				var mainpage=plus.webview.getLaunchWebview();
+					mui.fire(mainpage,'gohome');
 			});
 		}
 		mui.plusReady(function() {
