--- a/kankan/pages/main/products/productslist.html
+++ b/kankan/pages/main/products/productslist.html
@@ -13,7 +13,6 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title lang" data-locale="detli_title"></h1>
-			<a class="mui-icon mui-icon-more mui-icon-right-nav mui-pull-right"></a>
 		</header>
 		<div id="loading" class="mui-content ka_userbox">
 			<div class="spinner">
@@ -38,16 +37,16 @@
 					<a href="commentlist.html">
 						<div class="mui-navigate-right ka_userbox commentlists">
 							<div class="mui-pull-right ka_commentlevelbox">
-								<img src="../../../images/Good.PNG" width="30" height="30">
-								<div class="ka_comlevnumber goodnum"></div>
+								<img src="../../../images/Bad.PNG" width="30" height="30">
+								<div class="ka_comlevnumber badnum"></div>
 							</div>
 							<div class="mui-pull-right ka_commentlevelbox">
 								<img src="../../../images/Normal.PNG" width="30" height="30">
 								<div class="ka_comlevnumber normalnum"></div>
 							</div>
 							<div class="mui-pull-right ka_commentlevelbox">
-								<img src="../../../images/Bad.PNG" width="30" height="30">
-								<div class="ka_comlevnumber badnum"></div>
+								<img src="../../../images/Good.PNG" width="30" height="30">
+								<div class="ka_comlevnumber goodnum"></div>
 							</div>
 						</div>
 						<input type="hidden" value="" id="commid" name="commid" />
@@ -83,7 +82,10 @@
 						id: 'detail.html',
 						url: 'detail.html'
 					}
-				]
+				],
+				beforeback: function() {
+					location.reload();
+			    }
 			});
 			window.addEventListener('prolid', function(event) {
 				var uid = event.detail.id;
@@ -107,11 +109,11 @@
 			}
 
 			function messageshow(results) {
-				$(".comditylists").empty();
-				$(".ka_touxiangimg").empty();
-				$(".uname").empty();
-				$(".uproducts").empty();
-				$(".ucomment").empty();
+//				$(".comditylists").empty();
+//				$(".ka_touxiangimg").empty();
+//				$(".uname").empty();
+//				$(".uproducts").empty();
+//				$(".ucomment").empty();
 				var commodity = results.data;
 				var uname = commodity.user_name;
 				var uimage = commodity.user_photo;
