--- a/kankan/pages/main/products/product_want_to_buy.html
+++ b/kankan/pages/main/products/product_want_to_buy.html
@@ -24,42 +24,42 @@
 					<div class="mui-pull-right mui-icon mui-icon-camera takepic" id="takepic"></div>
 				</div>
 				<!--mask-->
-				<div class="z_mask">
-					<!--alert box-->
-					<div class="z_alert">
-						<p class="lang" data-locale="commodity_photodet"></p>
-						<p>
-							<span class="z_cancel lang" data-locale="det_goodconcel"></span>
-							<span class="z_sure lang" data-locale="register"></span>
-						</p>
+		        <div class="z_mask">
+		            <!--alert box-->
+		            <div class="z_alert">
+		                 <p class="lang" data-locale="commodity_photodet"></p>
+		                <p>
+		                    <span class="z_cancel lang" data-locale="det_goodconcel"></span>
+		                    <span class="z_sure lang" data-locale="register"></span>
+		                </p>
+		            </div>
+		        </div>
+				     <br />
+				  <input type="hidden" name="" id="0" value="0" class="imgname" />
+	        	 <input type="hidden" name="" id="1" value="0" class="imgname" />
+	        	 <input type="hidden" name="" id="2" value="0" class="imgname" />
+	        	 <input type="hidden" name="" id="3" value="0" class="imgname" />
+				     <div class="ka_prologbox">
+					     <h5 class="ka_proloh5 lang" data-locale="commodity_name"></h5>
+					    <ul class="mui-table-view">
+				            <li class="mui-table-view-cell">
+			                   <input type="text" class="lang" data-locale="commodity_namelength" id="comm_name" name="comm_name" maxlength="40">
+				            </li>
+				            <li class="mui-table-view-cell">
+				                 <textarea  class="ka_noborder" maxlength="1000" id="comm_detail" name="comm_detail"></textarea>
+				            </li>
+				        </ul>
+				     </div>
+				     <br />
+					<div class="ka_description lang" data-locale="commodity_want_forbidentext"></div>
+					<div class="ka_userbox">
+						<button type="button" class="mui-btn mui-btn-red ka_prologsure lang"  data-locale="commodity_want_butonsure" onclick="publishs()"></button>
 					</div>
-				</div>
-				<br />
-				<input type="hidden" name="" id="0" value="0" class="imgname" />
-				<input type="hidden" name="" id="1" value="0" class="imgname" />
-				<input type="hidden" name="" id="2" value="0" class="imgname" />
-				<input type="hidden" name="" id="3" value="0" class="imgname" />
-				<div class="ka_prologbox">
-					<h5 class="ka_proloh5 lang" data-locale="commodity_name"></h5>
-					<ul class="mui-table-view">
-						<li class="mui-table-view-cell">
-							<input type="text" class="lang" data-locale="commodity_namelength" id="comm_name" name="comm_name" maxlength="40">
-						</li>
-						<li class="mui-table-view-cell">
-							<textarea class="ka_noborder" maxlength="1000" id="comm_detail" name="comm_detail"></textarea>
-						</li>
-					</ul>
-				</div>
-				<br />
-				<div class="ka_description lang" data-locale="commodity_want_forbidentext"></div>
-				<div class="ka_userbox">
-					<button type="button" class="mui-btn mui-btn-red ka_prologsure lang" data-locale="commodity_want_butonsure" onclick="publishs()"></button>
-				</div>
-				<br/>
-				<div class="showimg"></div>
-				<div id="deltimg" style="display: none;"></div>
-			</form>
-		</div>
+					<br/>
+					<div class="showimg"></div>
+			        <div id="deltimg" style="display: none;"></div>
+		        </form>
+			</div>
 	</body>
 	<script src="../../../js/mui.min.js"></script>
 	<script src="../../../js/jquery-3.2.0.min.js"></script>
@@ -68,87 +68,98 @@
 	<script src="../../../js/common.js"></script>
 	<script src="../../../js/pro_uploadimg.js"></script>
 	<script>
-		$(function() {
-			$(".ka_noborder").attr("placeholder", TextMessage.commodity_descriptionlength);
+$(function() {
+	$(".ka_noborder").attr("placeholder", TextMessage.commodity_descriptionlength);
+});
+//submit form
+function publishs() {
+	var buy_sell_flag = "1";
+	var comm_name = $("#comm_name").val();
+	var comm_detail = $("#comm_detail").val();
+	var imges0 = $("#0").val();
+	var imges1 = $("#1").val();
+	var imges2 = $("#2").val();
+	var imges3 = $("#3").val();
+	if(comm_name.replace(/\s/g,'') == "") {
+		mui.toast(TextMessage.pro_nametest, {
+			duration: 'long',
+			type: 'div'
 		});
-		//submit form
-		function publishs() {
-			var buy_sell_flag = "1";
-			var comm_name = $("#comm_name").val();
-			var comm_detail = $("#comm_detail").val();
-			var imges0 = $("#0").val();
-			var imges1 = $("#1").val();
-			var imges2 = $("#2").val();
-			var imges3 = $("#3").val();
-			if(comm_name.replace(/\s/g, '') == "") {
-				alert(TextMessage.pro_nametest);
-				document.publishcomodity.comm_name.focus();
-				return false;
-			}
-			if(comm_detail.replace(/\s/g, '') == "") {
-				alert(TextMessage.pro_descriptiontest);
-				document.publishcomodity.comm_detail.focus();
-				return false;
-			}
-			var params = {
-				"buy_sell_flag": buy_sell_flag,
-				"comm_name": comm_name,
-				"comm_detail": comm_detail,
-				"imges[0]": imges0,
-				"imges[1]": imges1,
-				"imges[2]": imges2,
-				"imges[3]": imges3
-			};
-			console.dir(params);
-			Repository.Commodity.Commoditypublish(params, {
-				ok: function(data) {
-					Log.d("success");
-					alert(TextMessage.pro_logininfo);
-					location.reload();
-					mui.plusReady(function() {
-						var mainpage = plus.webview.getLaunchWebview();
-						mui.fire(mainpage, 'gohome');
-					});
-				},
-				ng: function(data) {
-					Log.d(data);
-					if(data == "1000" || data == "2002") {
-						mui.toast(TextMessage.test, {
-							duration: 'long',
-							type: 'div'
-						});
-						mui.openWindow({
-							id: 'login',
-							url: "../../login/login.html"
-						});
-					}
-					//			if(data=="2002"){
-					//				mui.toast(TextMessage.userng, {
-					//					duration: 'long',
-					//					type: 'div'
-					//				});
-					//				mui.openWindow({
-					//					id: 'login',
-					//					url:"../../login/login.html"
-					//				});
-					//			}
-					if(data == "2007") {
-						mui.toast(TextMessage.ticketng, {
-							duration: 'long',
-							type: 'div'
-						});
-						location.reload();
-						mui.openWindow({
-							id: 'point_to_ticket',
-							url: "../sttting/point_to_ticket.html"
-						});
-					}
-					//alert("other error code:" + data);
-
-				}
+		document.publishcomodity.comm_name.focus();
+		return false;
+	}
+	if(comm_detail.replace(/\s/g,'') == "") {
+		mui.toast(TextMessage.pro_descriptiontest, {
+			duration: 'long',
+			type: 'div'
+		});
+		document.publishcomodity.comm_detail.focus();
+		return false;
+	}
+	var params = {
+		"buy_sell_flag":buy_sell_flag,
+		"comm_name":comm_name,
+		"comm_detail":comm_detail,
+		"imges[0]": imges0,
+		"imges[1]": imges1,
+		"imges[2]": imges2,
+		"imges[3]": imges3
+	};
+	console.dir(params);
+	Repository.Commodity.Commoditypublish(params, {
+		ok: function(data) {
+			Log.d("success");
+			mui.toast(TextMessage.pro_logininfo, {
+				duration: 'long',
+				type: 'div'
 			});
-
+			location.reload();
+			mui.plusReady(function() {
+				var mainpage=plus.webview.getLaunchWebview();
+				 mui.fire(mainpage,'gohome');
+			});
+		},
+		ng: function(data) {
+			Log.d(data);
+			Api.callback_ng(data);
+			/*if(data == "1000" || data=="2002") {
+				mui.toast(TextMessage.test, {
+					duration: 'long',
+					type: 'div'
+				});
+				mui.openWindow({
+					id: 'login',
+					url:"../../login/login.html"
+				});
+			} 
+//			if(data=="2002"){
+//				mui.toast(TextMessage.userng, {
+//					duration: 'long',
+//					type: 'div'
+//				});
+//				mui.openWindow({
+//					id: 'login',
+//					url:"../../login/login.html"
+//				});
+//			}
+			if(data=="2007"){
+				mui.toast(TextMessage.ticketng, {
+					duration: 'long',
+					type: 'div'
+				});
+				location.reload();
+				mui.openWindow({
+					id: 'point_to_ticket',
+					url:"../sttting/point_to_ticket.html"
+				});
+			}*/
+			Api.callback_ng(data);
+			//alert("other error code:" + data);
+			
 		}
-	</script>
+	});
+
+}
+</script>
 
 </html>
