--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -44,7 +44,7 @@
 					<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
 						<div id="scroll1" class="mui-scroll-wrapper">
 							<div class="mui-scrolls">
-								<ul class="mui-table-view mui-grid-view want-sell">
+								<ul class="mui-table-view mui-grid-view want-sell" style="padding-top:10px;">
 								</ul>
 							</div>
 						</div>
@@ -68,13 +68,7 @@
 		<script src="../../../js/sha256.js"></script>
 		<script src="../../../js/common.js"></script>
 		<script>
-			mui.init(/*{
-				swipeBack: false,
-				preloadPages: [{
-						id:"translatelist",
-						url:"../../transaction/transaction2.html"
-				}]
-			}*/);
+			mui.init();
 			var imgwidth=parseInt($(window).width())/3-17;
 			function showcommodity(results){
 				var data=results.data;
@@ -86,7 +80,7 @@
 				}
 				for(var ot=0;ot<others.length;ot++){
 					var transid=others[ot].trans.trans_id;
-					var comm_name=others[ot].trans[0].comm_name;
+					var comm_name=HTMLDecode(others[ot].trans[0].comm_name);
 					var comm_img=others[ot].trans[0].comm_img;
 					var trans_type=others[ot].trans.trans_type;
 					if(trans_type=="0"){
@@ -113,10 +107,10 @@
 					}
 					var html = new Util.StringBuilder();
 					html.appendFormat('<li class="mui-table-view-cell mui-media mui-col-xs-4 translate"><a id="{0}" href="#">',transid)
-						.appendFormat('<div class="ka_imgoption"><img class="mui-media-object" src="{0}" style="height: auto;width:100%;margin-top:-'+toppx+'px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>',comm_img=="" ? "../../../images/nopic.jpg":comm_img)
+						.appendFormat('<div class="ka_imgoption"><img class="mui-media-object" src="{0}" style="height: auto;width:100%;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>',comm_img=="" ? "../../../images/nopic.jpg":comm_img)
 						.appendFormat('<div class="mui-media-body">{0}</div>', comm_name)
 						.appendFormat('</a><div class="{0}">{1}</div>',trans_type==0 ? "kankan_jyz":"kankan_jycl",trans_typetext)
-						.appendFormat('<div class="kankan_morecoin"><img src="../../../images/morebut.png" style="width: 25px; height: 25px;display:{0}"></div>',transprocount>1 ?"":"none")
+						.appendFormat('<div class="kankan_morecoin"><img src="../../../images/morebut.png" style="width: 25px; height: 25px;display:{0};"></div>',transprocount>1 ?"":"none")
 						.appendFormat('<div class="mui-pull-left kankan_jyimgbox"><img src="{0}" style="border-radius: 50%; width: 20px; height: 20px;">',my_photo=="" ? "../../../images/userPhoto.png": my_photo)
 						.appendFormat('<img src="../../../images/jiantou.png" class="kankan_jhjiantou"><img src="{0}" style="border-radius: 50%; width: 20px; height: 20px;"></div>', other_photo=="" ?"../../../images/userPhoto.png":other_photo)
 						//.appendFormat('<div class="mui-pull-left ka_mony"><div>{0}<font color="#000000"> P</font></div></div></li>',price);
@@ -129,7 +123,7 @@
 					});
 					//request
 					var own=data.other;
-					var html2='<ul class="mui-table-view mui-grid-view want-sell">';
+					var html2='<ul class="mui-table-view mui-grid-view want-sell" style="padding-top:10px;">';
 					for(var ow=0;ow<own.length;ow++){
 						var otransid=own[ow].trans.trans_id;
 						var ocomm_name=own[ow].trans[0].comm_name;
@@ -165,7 +159,7 @@
 							otoppx=cha2/2;
 						}
 						html2 += '<li class="mui-table-view-cell mui-media mui-col-xs-4 translate"><a id="'+otransid+'" href="#">';
-						html2 += '<div class="ka_imgoption"><img class="mui-media-object" src="'+ocomm_img+'" style="height: auto;width:100%;margin-top:-'+otoppx+'px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
+						html2 += '<div class="ka_imgoption"><img class="mui-media-object" src="'+ocomm_img+'" style="height: auto;width:100%;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 						html2 += '<div class="mui-media-body">'+ocomm_name+'</div>';
 						html2 += '</a><div class="';
 						if(otrans_type=="0"){
