--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -17,7 +17,7 @@
 				background-color: #efeff4;
 			}
 			.pimgbox{
-				width:113px;height:76px;text-align:center;border:1px solid #cccccc;overflow:hidden;
+				width:113px;max-height:76px;text-align:center;border:1px solid #ffffff;overflow:hidden;
 			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="../../../css/feedback.css" />
@@ -307,7 +307,7 @@
 				}
 			],
 			beforeback: function() {
-		        var homePage = plus.webview.getWebviewById('pullrefresh_with_tab');
+		        var homePage = plus.webview.getWebviewById('home.html');
 				mui.fire(homePage, 'refresh',{refresh:"canRefresh"});
 		    }
 		});
@@ -498,7 +498,6 @@
 		function showuser(results){
 			$(".myfavourateshow").empty();
 			$(".myproductshow").empty();
-			var uaddress=results.data.address;
 			var ucomentnum=results.data.comment_cnt;
 			var unick_name=results.data.nick_name;
 			if(results.data.user_photo==""){
@@ -512,7 +511,11 @@
 			var unormalnum=results.data.user_opinion_m_count;
 			var badnum=results.data.user_opinion_l_count;
 			var uname=results.data.user_name;
-			var address=results.data.address;
+			if(results.data.address=="" || results.data.address=="undefined"){
+				var address="全国";
+			}else{
+				var address=results.data.address;
+			}
 			var uintroduce=results.data.introduce;
 			var uticknum=results.data.user_ticket;
 			$(".headimg").attr("src",user_photo);
@@ -714,6 +717,16 @@
 								url:"../../login/login.html"
 							});
 						}
+						if(data == "3020") {
+							mui.toast(TextMessage.errorCode_3020, {
+								duration: 'long',
+								type: 'div'
+							});
+							mui.openWindow({
+								id: 'login',
+								url:"../../login/emai_summate.html"
+							});
+						}
 						console.log("other error code:" + data);
 						
 					}
@@ -732,14 +745,29 @@
 					$(".tran-page").show();
 				},
 				ng: function(data) {
-					if(data == "2002") {
+					if(data == "2002" || data == "1000") {
 						mui.toast(TextMessage.userng, {
 							duration: 'long',
 							type: 'div'
 						});
+						mui.openWindow({
+								id: 'login',
+								url:"../../login/login.html"
+							});
+					}else if(data == "3020") {
+						mui.toast(TextMessage.errorCode_3020, {
+							duration: 'long',
+							type: 'div'
+						});
+						mui.openWindow({
+							id: 'login',
+							url:"../../login/emai_summate.html"
+						});
+					}else{
+							mui.back();
 					}
 					console.log("other error code:" + data);
-					mui.back();
+					
 				}
 			});
 		});
@@ -792,10 +820,10 @@
 							ok: function(data) {
 								console.log("success");
 								//console.dir(data);
-								mui.toast(TextMessage.updatesuccessinfo, {
-									duration: 'long',
-									type: 'div'
-								});
+//								mui.toast(TextMessage.updatesuccessinfo, {
+//									duration: 'long',
+//									type: 'div'
+//								});
 							},
 							ng: function(data) {
 								Log.d(data);
