--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -87,13 +87,13 @@
 							</li>
 						</ul>-->
 						<ul class="tran-distribution">
-							<li class="tran-distribution-law">
+							<li class="tran-distribution-law logisticli">
 								<div class="tran-distribution-law-detail">
 									<a href="#tradeLaw">
 										<font size="3" class="lang" color="999999" data-locale="trans_criterion" vertical-align="middle"></font>
 									</a>
 								</div>
-								<a href="../main/logisticslist.html">
+								<a href="../main/logisticslist.html" class="logistica">
 									<div class="tran-distribution-call">
 										<font size="2" class="lang" color="#FFFFF" data-locale="trans_logistic" vertical-align="middle"></font>
 									</div>
@@ -137,6 +137,14 @@
 				plus.webview.close(preView);
 				showRequestDetail();
 			})
+			mui(".logisticli").on("tap",".logistica",function(){
+				mui.openWindow({
+				    url:'../main/logisticslist.html',
+				    extras:{
+				        flag:'tra'  //扩展参数
+				    }
+				});
+			});
 			//setInterval(showRequestDetail, 10000, "");
 			function submitChat() {
 				var chatMsg = $("#msg").val();
