物流页面返回键重新处理

--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -93,7 +93,7 @@
 										<font size="3" class="lang" color="999999" data-locale="trans_criterion" vertical-align="middle"></font>
 									</a>
 								</div>
-								<a href="../main/logisticslist.html" class="logistica">
+								<a href="../main/logisticslist2.html" class="logistica">
 									<div class="tran-distribution-call">
 										<font size="2" class="lang" color="#FFFFF" data-locale="trans_logistic" vertical-align="middle"></font>
 									</div>
@@ -137,14 +137,6 @@
 				plus.webview.close(preView);
 				showRequestDetail();
 			})
-			mui(".logisticli").on("tap",".logistica",function(){
-				mui.openWindow({
-				    url:'../main/logisticslist.html',
-				    extras:{
-				        flag:'tra'  //扩展参数
-				    }
-				});
-			});
 			//setInterval(showRequestDetail, 10000, "");
 			function submitChat() {
 				var chatMsg = $("#msg").val();
