--- a/kankan/pages/main/logisticslist2.html
+++ b/kankan/pages/main/logisticslist2.html
@@ -22,7 +22,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;"><font size="3" class="lang" data-locale="back"></font></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>
 			<h1 class="mui-title lang" data-locale="logistic"></h1>
 		</header>
 		<div class="mui-content">
