修复找回密码页面表单中的label显示问题

--- a/kankan/pages/login/forget_password.html
+++ b/kankan/pages/login/forget_password.html
@@ -21,6 +21,10 @@
 				width: 38%;
 			}
 			
+			.mui-input-group input {
+				font-size: smaller;
+			}
+			
 			.mui-input-row label~input,
 			.mui-input-row label~select,
 			.mui-input-row label~textarea {
